# VulkanComputePathTracer

./: .gitignore  .gitmodules  CMakeLists.txt  CMakeSettings.json  LICENSE
src/: CMakeLists.txt  main.cpp  model_loading.cpp  utility.cpp
src/shaders/: compile.bat  compute.comp  compute.spv  rayTrace.spv
